Cross browser - stop text wrap in ff * #462

--- a/swc-bootstrap.css
+++ b/swc-bootstrap.css
@@ -127,6 +127,8 @@ blockquote p {
   transition:0.5s;
   width:100%;
   margin: 0 auto;
+  white-space: nowrap;
+  z-index:10;
 }
 
 #github-ribbon a:hover {
